--- a/FORMAT.css
+++ b/FORMAT.css
@@ -44,7 +44,7 @@
     opacity: 1.0;
     width: 98%;
     
-    background-image: url("../DATA/Banner.png");
+    background-image: url("Banner.png");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -75,7 +75,7 @@
     margin-top: 30px;
     margin-right: 2%;
     
-    background-image: url("../DATA/IPhone_Start.png");
+    background-image: url("IPhone_Start.png");
     background-size: 100%;
     background-repeat: no-repeat;
 } 
