--- a/FORMAT.css
+++ b/FORMAT.css
@@ -44,7 +44,7 @@
     opacity: 1.0;
     width: 98%;
     
-    background-image: url("Banner.png");
+    background-image: url("../DATA/Banner.png");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -75,7 +75,7 @@
     margin-top: 30px;
     margin-right: 2%;
     
-    background-image: url("IPhone_Start.png");
+    background-image: url("../DATA/IPhone_Start.png");
     background-size: 100%;
     background-repeat: no-repeat;
 } 
@@ -166,7 +166,7 @@
 
 .panel {
     padding: 0 18px;
-    background-color: #8D7F6D;
+    background-color: #756556;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
